fix: sidebar not visible

--- a/apps/client/app/app.css
+++ b/apps/client/app/app.css
@@ -33,7 +33,7 @@
     --input: 214.3 31.8% 91.4%;
     --ring: 222.2 84% 4.9%;
 
-    --sidebar: 0%, 0%, 0%;
+    --sidebar: hsl(0, 0%, 96%);
     --sidebar-background: 0 0% 98%;
     --sidebar-foreground: 240 5.3% 26.1%;
     --sidebar-primary: 240 5.9% 10%;
@@ -73,7 +73,7 @@
     --input: 217.2 32.6% 17.5%;
     --ring: 212.7 26.8% 83.9%;
 
-    --sidebar: 45.2% 78.25% 264.052%;
+    --sidebar: hsl(0, 0%, 4%);
     --sidebar-background: 240 5.9% 10%;
     --sidebar-foreground: 240 4.8% 95.9%;
     --sidebar-primary: 224.3 76.3% 48%;
